101/7:

 * Fixed choice% size for X with horizontal label (PR 1213)

 * Fixed bad calls to get-extent in media-edit% (PR 1218)

101/6:

 * Added 'symbol font family

 * Changed font-search meachnism to try normal-weight and
   normal-style before resorting to a default font

 * Added set-screen-name, set-post-script-name, and set-afm-name to
   font-name-directory<%>.

 * Fixed region and font problems for post-script-dc%

 * Added {set,get}-paste-text-only to editor<%>

 * Added {set,get}-line-spacing and {set,get}-styles-sticky to text%

 * Added {set,get}-tight-text-fit to editor-snip%

 * string-snip% forces a non-breaking space to draw like a space

101/5:

 * Fixed PR 1170, `alignment' menu item from MrEd's
   `append-editor-font-menu-items'


Version 101: ??

Showing an inactive child window now raises an exception
Added set-paragrapgh-alignment to text%
Added 'symbol font family
Added {set,get}-paste-text-only to editor<%>
Added {set,get}-line-spacing and {set,get}-styles-sticky to text%
Added {set,get}-tight-text-fit to editor-snip%

----------------------------------------------------------------------

Version 100: August 9, 1999

MrEd 100 is the successor to MrEd 53. For MrEd 100, we preserved the
underlying windowing model, but redesigned the GUI toolbox interface
to make it simpler and more Scheme-like. Every MrEd 53 program
requires substantial changes to run in MrEd 100.

The revised interface makes MrEd more accessible to new users: class
and method names are more consistent; useless and redundant methods
have been eliminated; and methods check their arguments more
precisely.  Key portions of the documentation have been re-written,
and a new help system called "Help Desk" makes locating information
much easier than before.

The implementation behind the revised interface is reliable. Whereas
previous versions of MrEd were plagued by bugs and inconsistently
implemented features, the new interface is consistently implemented